Day 1 of coding

--- a/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
+++ b/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
@@ -698,6 +698,82 @@
    "source": [
     "That is the basics of string formatting!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello my name is Rishabh Tiwari\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello my name is %s %s\" %('Rishabh','Tiwari'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=\"University\"\n",
+    "y=\"of Heidelberg\"\n",
+    "a=\"Rishabh\"\n",
+    "b=\"Tiwari\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Rishabh Tiwari and I study in University of Heidelberg\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=\"University\"\n",
+    "y=\"of Heidelberg\"\n",
+    "a=\"Rishabh\"\n",
+    "b=\"Tiwari\"\n",
+    "print(\"My name is %s %s and I study in %s %s\" %(a,b,x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Rishabh Tiwari\n",
+      "My name is 'Rishabh' 'Tiwari'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"My name is %s %s\" %('Rishabh','Tiwari'))\n",
+    "print(\"My name is %r %r\" %('Rishabh', 'Tiwari'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -716,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
